[sync] Prevent flash of error icon while loading syncSetup page

Profile sync service relies on the lifetime of
SyncSetupInProgressHandles to determine if setup is in progress.
Currently, none of these handles are alive in the period between the
closure of the sync confirmation dialog and the loading of the sync
setup page. This causes profile sync service to think that setup is both
incomplete and not in progress, which surfaces an error icon on the
avatar.

This CL causes PeopleHandler to acquire its SyncSetupInProgressHandle
earlier if it detects that it's navigating directly to the syncSetup
page.

R=
BUG=738789

Review-Url: https://codereview.chromium.org/2971353002
Cr-Commit-Position: refs/heads/master@{#487236}

Former-commit-id: a7580295ea5bc9ae2c4c8c8d02821d56ecdc2af0